# jobsearchagent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml  ruff.toml
backend/app/: main.py
backend/app/api/: analytics.py  clarifications.py  companies.py  evaluation.py  jobs.py  location.py  scrape.py
backend/app/core/: config.py  logging.py
backend/app/db/: database.py  models.py  quality.py  queries.py
backend/app/evaluator/: batch.py  document_parser.py  feedback_seed.py  models.py  ollama_client.py  pipeline.py  profile_extractor.py  rag.py  stage1.py  stage2.py
backend/app/location/: geocoding.py  models.py  parser.py  pipeline.py  resolver.py  transit.py
backend/app/scraper/: base.py
backend/reports/: data_quality_2026-03-22.json  data_quality_2026-03-23.json
backend/scripts/: backfill_raw_text.py  data_quality_report.py  diagnose_raw_text.py
backend/tests/: conftest.py
backend/tests/fixtures/: kimeta_position_filter.html  service_bund_rss_sample.xml  stepstone_rss_sample.xml
backend/tests/integration/: conftest.py  test_analytics_api.py  test_clarifications_api.py  test_companies_api.py  test_db_schema.py  test_evaluation_api.py  test_evaluation_e2e.py  test_evaluation_pipeline.py  test_evaluation_queries.py  test_jobs_api.py  test_location_pipeline.py  test_location_queries.py
backend/tests/unit/: test_base_scraper.py  test_batch.py  test_document_parser.py  test_feedback_seed.py  test_geocoding.py  test_kimeta_scraper.py  test_location_models.py  test_ollama_client.py  (+8 more)
(+115 files in other folders)
